public/skin/adminhtml/default/default/base.css
/* ... */
.massaction .entry-edit .outer-span {
    float: left
}

.grid tr.filter {
    background: url(images/filter_row_bg.gif)repeat-x #e3eff1;
    cursor: default
}

.grid tr.filter th {
    padding-top: 5px;
    padding-bottom: 5px;
    border: 1px solid #bdbdbd;
    border-width: 0 1px 1px 0;
    white-space: normal
}

.grid tr.filter th.last {
    border-right: 0
}

.grid tr.filter input.input-text {
    width: 85%
}

.grid tr.filter select {
    width: 100%
}

.grid tr.filter .range .range-line {
    margin-bottom: 3px;
    width: 100px
}

.grid tr.filter .range div.date {
    min-width: 121px
}

.grid tr.filter .range input {
    width: 60px!important;
    margin-top: 0
}

.grid tr.filter .range input::placeholder {
    color: transparent
}

.grid tr.filter .range select {
    float: right;
    width: 65px!important;
    margin-top: 0
}

.grid tr.filter .range .label {
    display: block;
    width: 30px;
    float: left;
    padding-right: 3px;
    text-align: right
}

.grid tr.filter .date img {
    width: 15px;
    height: 15px;
    cursor: pointer;
    vertical-align: middle;
    padding-left: 3px
}

.grid .head-massaction select {
    width: auto!important;
    max-width: 90px
}

.grid select.select-export-filter,.grid select.multiselect-export-filter {
    width: 278px
}

.grid table tfoot tr {
    background: #d7e5ef
}

.grid table tfoot tr td {
    border-top: 1px solid #9babb9;
    background: #e5ecf2;
    line-height: 1.7em
}

.grid table.border tfoot tr td {
    background: #d7e5ef!important
}

.dynamic-grid th {
    padding: 2px;
    width: 100px
}

.dynamic-grid td {
    padding: 2px
}

tr.dynamic-grid td,tr.dynamic-grid th {
    padding: 2px 10px 2px 0;
    width: auto
}

tr.dynamic-grid input.input-text {
    width: 154px
}

.available {
    color: #080;
    font-weight: 700
}

.not-available {
    color: #800
}

.icon-copy {
    display: inline-block;
    background-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 111.07 122.88"><path d="M97.67 20.81h0l.01.02a13.38 13.38 0 0 1 9.46 3.93 13.32 13.32 0 0 1 3.9 9.42h.02v.02 75.28.01h-.02c-.01 3.68-1.51 7.03-3.93 9.46a13.32 13.32 0 0 1-9.42 3.9v.02h-.02-59.19-.01v-.02c-3.69-.01-7.04-1.5-9.46-3.93a13.37 13.37 0 0 1-3.91-9.42h0V34.2v-.01h.02c.01-3.69 1.52-7.04 3.94-9.46 2.41-2.4 5.73-3.9 9.42-3.91v-.02h.02l59.17.01h0zM.02 75.38L0 13.39v-.01h.02a13.44 13.44 0 0 1 3.93-9.46A13.37 13.37 0 0 1 13.37.01V0h.02 59.19c7.69 0 8.9 9.96.01 10.16H13.4h-.02v-.02c-.88 0-1.68.37-2.27.97-.59.58-.96 1.4-.96 2.27h.02v.01 3.17 58.81c0 8.26-10.15 8.72-10.15.01h0zm100.89 34.11V34.2v-.02h.02c0-.87-.37-1.68-.97-2.27-.59-.58-1.4-.96-2.28-.96v.02h-.01-59.19-.02v-.02c-.88 0-1.68.38-2.27.97-.59.58-.96 1.4-.96 2.27h.02v.01 75.28.02h-.02c0 .88.38 1.68.97 2.27s1.4.96 2.27.96v-.02h.01 59.19.02v.02c.87 0 1.68-.38 2.27-.97.59-.58.96-1.4.96-2.27h-.01 0 0 0z" fill-rule="evenodd"/></svg>');
    background-repeat: no-repeat;
    background-size: contain;
    cursor: pointer;
    width: 12px;
    height: 12px;
    margin: 2px 0 0 2px
}

.entry-edit-head .icon-copy {
    width: 11px;
    height: 11px;
    margin: 0 0 0 5px;
    filter: hue-rotate(0) brightness(0) contrast(1) saturate(0) invert(1)
}

.icon-copy-copied {
    background-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" viewBox="0 0 30 30"><path d="M26.98 5.99a1 1 0 0 0-.687.303L11 21.586l-6.293-6.293a1 1 0 1 0-1.414 1.414l7 7a1 1 0 0 0 1.414 0l16-16a1 1 0 0 0-.727-1.717z"/></svg>')
}

dl.accordion .grid {
    margin-bottom: 0
}

dl.accordion dt,.entry-edit .entry-edit-head {
    background: #6f8992;
    padding: 2px 10px
}

dl.accordion dt,div.collapseable {
    margin-top: 1px
}

dl.accordion dt a,div.collapseable a {
    background: url(images/entry_edit_head_arrow_down.gif)100% 50%no-repeat;
    color: #fff;
    display: block;
    font-weight: 700;
    text-decoration: none
}

div.disabled {
    background: #c6cbc9!important
}

div.disabled a {
    background-image: url(images/entry_edit_head_arrow_down2.gif)!important;
    color: #f6f6f6!important
}

.entry-edit fieldset.collapseable {
    margin-bottom: 10px
}

dl.accordion dt a:hover,div.collapseable a:hover {
    color: #fff;
    text-decoration: none
}

dl.accordion dt.open a,div.collapseable a.open {
    background: url(images/entry_edit_head_arrow_up.gif)100% 50%no-repeat
}

dl.accordion dd {
    display: none
}

dl.accordion dd.open {
    display: block
}

img.accordion-btn {
    float: right;
    margin-top: 1px;
    margin-right: 5px
}

ul.tabs {
    border-top: 1px solid #bebebe;
    background-color: #e7efef
}

ul.tabs a,ul.tabs span {
    display: block
}

ul.tabs a,ul.tabs a:hover {
    text-decoration: none
}

ul.tabs a,ul.tabs a:hover {
    color: #000
}

ul.tabs,ul.tabs a {
    background: url(images/tabs_link_bg.gif)repeat-y 100%#e7efef
}

ul.tabs a:hover {
    background-color: #d8e6e6;
    background-image: url(images/tabs_link_over_bg.gif)
}

ul.tabs a.active {
    padding: 0;
    border-bottom: 1px solid #bebebe;
    background: 0 0
}

ul.tabs a:hover.active {
    padding: 0
}

ul.tabs span {
    background: url(images/tabs_span_bg.gif)repeat-x 0 100%;
    padding: .3em .5em .28em 1.5em;
    cursor: pointer
}

ul.tabs span em {
    float: right
}

ul.tabs a.active span,ul.tabs a:hover.active span {
    background: #fff;
    font-weight: 700
}

ul.tabs a.subitem {
    padding-left: 2.2em
}

ul.tabs span.changed,ul.tabs span.error,ul.tabs-horiz span.changed,ul.tabs-horiz span.error {
    float: right;
    background: 0;
    padding: 0;
    display: none;
    margin-left: 8px
}

ul.tabs a.changed span.changed,ul.tabs-horiz a.changed span.changed {
    width: 12px;
    height: 12px;
    display: block;
    color: #090!important
}

ul.tabs a.error span.error,ul.tabs-horiz a.error span.error {
    width: 12px;
    height: 12px;
    display: block;
    color: #c40
}

ul.tabs a.changed span.changed svg,ul.tabs a.error span.error svg {
    width: 20px
}
/* ... */

